# nonebot_plugin_fortune

./: .gitignore  .pre-commit-config.yaml  How-to-add-new-theme.md  LICENSE  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: dependabot.yml  poetry-publish.yml  release-drafter.yml
nonebot_plugin_fortune/: __init__.py  config.py  data_source.py  download.py  resource_handler.py  t.py  t2.py  utils.py  utils_out_img.py
nonebot_plugin_fortune/resource/: fortune_config.json  fortune_data.json  fortune_setting.json  specific_rules.json
nonebot_plugin_fortune/resource/fortune/: choice.json  choice.json{     "lkxd": [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] }  copywriting copy.json  copywriting.json  goodLuck.json  t.json
