[tool.poetry]
name = "nonebot_plugin_fortune"
version = "0.4.10.post2"
description = "Fortune divination!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MinatoAquaCrews/nonebot_plugin_fortune"
homepage = "https://github.com/MinatoAquaCrews/nonebot_plugin_fortune"
documentation = "https://github.com/MinatoAquaCrews/nonebot_plugin_fortune#readme"
keywords = ["nonebot2", "nonebot-plugin", "Fortune", "MinatoAquaCrews"]
packages = [{include = "nonebot_plugin_fortune"}]
exclude = ["nonebot_plugin_fortune/resource/img"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.1.3"
nonebot-plugin-apscheduler = "^0.2.0"
pillow = "^9.0.0"
httpx = "^0.23.0"
aiofiles = "^0.8.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
default = false
secondary = false
