[tool.poetry]
name = "nonebot_plugin_fortune"
version = "0.4.11.post1"
description = "Fortune divination!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MinatoAquaCrews/nonebot_plugin_fortune"
homepage = "https://github.com/MinatoAquaCrews/nonebot_plugin_fortune"
documentation = "https://github.com/MinatoAquaCrews/nonebot_plugin_fortune#readme"
keywords = ["nonebot2", "nonebot-plugin", "Fortune", "MinatoAquaCrews"]
packages = [{include = "nonebot_plugin_fortune"}]
exclude = ["nonebot_plugin_fortune/resource/img"]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc4"
nonebot-adapter-onebot = "^2.2.0"
nonebot-plugin-apscheduler = "^0.2.0"
pillow = "^9.0.0"
httpx = "^0.23.0"
aiofiles = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"
